# tes-geant

./: .gitignore  ActionInitialization.cc  ActionInitialization.hh  CMakeCache.txt  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  DetectorConstructionOld.cc  EventAction.cc  EventAction.hh  Hit.cc  Hit.hh  Makefile  ParticleMessenger.cc  ParticleMessenger.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  TESHit.hh  cmake_install.cmake  localize.py  mpi_active.h  setup.file  sim.cc  start.mac
.dvc/: config
ThSpectrum/: 2d_bkg.csv  NID_Bq.RPT  eff.RPT  spectrum.RPT  spectrum_analysis.ipynb
ThSpectrum/sim_spectrum/: TES_nt_hits_t0.csv  TES_nt_hits_t1.csv  TES_nt_hits_t2.csv  TES_nt_hits_t3.csv  TES_nt_hits_t5.csv  TES_nt_hits_t6.csv
analysis/: accelerate.py  analysis.ipynb  coincidence.ipynb  coincidence.py  data.dvc  lanthanum.ipynb  notes.txt  particle_frequency.csv  saber_calibration.ipynb  thorium-calibration.ipynb  thorium.ipynb  triple-coincidence.ipynb  triple-coincidence.py  veto_energy.csv
analysis/ThSpectrum/: NID.RPT  eff.RPT  probability_distribution.csv  real_counts_spectrum.csv  spectrum_analysis.ipynb
analysis/conda_env/: environment.yml
cry_v1.7/: setup
cry_v1.7/src/: .CRYAbsFunction.d  .CRYAbsParameter.d  .CRYBinning.d  .CRYCosLatitudeFunction.d  .CRYData.d  .CRYFunctionDict.d  .CRYGenerator.d  .CRYParamI.d  .CRYParameter.d  .CRYParticle.d  .CRYPdf.d  .CRYPrimary.d  .CRYPrimarySpectrumFunction.d  .CRYSetup.d  .CRYUtils.d  .CRYWeightFunc.d  .cry_fort.d
cry_v1.7/test/: testMain
geometry/: config1.gdml  config2.gdml  config3.gdml  config4.gdml  configBigTES.gdml  configNa.gdml  configNaI.gdml  configTh.gdml  cryostat.gdml  crystal_holder.gdml  crystals.gdml  detector.gdml  detector_horizontal.gdml  detector_vertical.gdml  pmt.gdml  veto.gdml
geometry/bigBoxTes/: copperBox.gdml  tesE.gdml
geometry/bottomScintillators/: bottomScintillators.gdml
hpc/: load_modules.sh  merge.sh  run_start.sh
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MPIRunActionMaster.hh  ParticleMessenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  TESHit.hh  TrackInformation.hh  TrackingAction.hh
macros/: GEANT4_ThMantleSpectrum_1024.txt  actinium.mac  efficiency.mac  env.mac  env.txt  filter.mac  lanthanum.mac  sodium.mac  start.mac  thorium.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MPIRunActionMaster.cc  ParticleMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  TESHit.cc  ThoriumParticleGun.cc  TrackInformation.cc  TrackingAction.cc
stl/: crystal1.stl  crystal2.stl  crystal3.stl  crystal4.stl  crystal_holder.stl  crystals.stl  pmt.stl  veto.stl
(+18 files in other folders)
